<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IndovinaIlNumero</string>
    <string name="action_settings">Settings</string>
    <string name="info">Scegli il range dei numeri</string>
    <string name="from">1</string>
    <string name="totext">to</string>
    <string name="to">100</string>
    <string name="start_game">Start\nGame</string>
    <string name="title_activity_game">Game</string>
    <string name="inserisci">Indovina il numero</string>
    <string name="bottoneInserisci">Inserisci</string>
    <string name="ins"></string>
    <string name="tentativi">Hai 5 tentativi a disposizione</string>
    <string name="hai_vinto"></string>
    <string name="how_much"></string>
    <string name="numero"></string>
    <string name="rinizia">Ricomincia</string>
    <string name="tasto1">1</string>
    <string name="tasto2">2</string>
    <string name="tasto3">3</string>
    <string name="tasto4">4</string>
    <string name="tasto5">5</string>
    <string name="tasto6">6</string>
    <string name="tasto7">7</string>
    <string name="tasto8">8</string>
    <string name="tasto9">9</string>
    <string name="tasto0">0</string>
    <string name="tasto00">00</string>
    <string name="tastoC">C</string>
    <string name="title_activity_level_game">LevelGame</string>
    <string name="title_activity_scelta_livelli">SceltaLivelli</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_main">NewMain</string>
    <string name="EstremoInferiore">Medium Text</string>
    <string name="EstremoSuperiore">Medium Text</string>
    <string name="trattin0">Small Text</string>
    <string name="trattino">-</string>
    <string name="punteggio"></string>
    <string name="bottonepower">New Button</string>
    <string name="livello2">liv2</string>
    <string name="livello3">liv3</string>
    <string name="livello4">liv4</string>
    <string name="livello5">liv5</string>
    <string name="livello6">liv6</string>
    <string name="livello7">liv7</string>
    <string name="livello8">liv8</string>
    <string name="title_activity_impostazioni">Impostazioni</string>



</resources>
