<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.franz.indovinailnumero.app.Game"
    android:background="#3baaff">

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/ins"
        android:textColor="#ffffff"
        android:textSize="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisci"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView" />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/bottoneInserisci"
        android:id="@+id/button"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:background="#99ffb5"
        android:clickable="true"
        android:onClick="Inserisci"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentativi"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="25dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:keepScreenOn="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="60sp"
        android:gravity="center"
        android:text="@string/hai_vinto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:textIsSelectable="false"
        android:id="@+id/textView4"
        android:onClick="ricomincia"
        android:clickable="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/how_much"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:textSize="40dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/numero"
        android:id="@+id/textView5"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

</RelativeLayout>
