<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/prova2">


    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:layout_marginTop="-40dp"
    android:layout_gravity="top"
>

    <com.franz.indovinailnumero.app.CustomView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/customView"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp">

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:gravity="center"
        android:text="@string/ins"
        android:textColor="#483c32"
        android:textSize="30dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisci"
        android:gravity="center"
        android:textColor="#483c32"
        android:textSize="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="prova"
            android:id="@+id/estremi"
            android:layout_below="@+id/textView"
            android:gravity="center"
            android:textColor="#483c32"
            android:textSize="20dp"
            android:layout_marginTop="-10dp" />

        <Button
        style="@android:style/ButtonBar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/bottoneInserisci"
        android:id="@+id/button"
        android:textColor="#000000"
        android:background="#99ffb5"
        android:clickable="true"
        android:onClick="checkWin"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/tentativi"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textColor="#483c32"
        android:textStyle="bold|italic"
        android:textSize="20dp"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="80dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:keepScreenOn="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="60sp"
        android:gravity="center"
        android:text="@string/hai_vinto"
        android:textIsSelectable="false"
        android:id="@+id/textView4"
        android:onClick="ricomincia"
        android:clickable="true"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/numero"
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-20dp"
        android:textSize="@dimen/activity_vertical_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0000"
            android:id="@+id/soldi"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:textColor="#ffff00cd" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:layout_marginBottom="5dp"
        android:visibility="visible">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/layoutTastiera"
            android:columnCount="5"
            android:orientation="horizontal"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="visible">

            <Button android:text="@string/tasto1"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto1"
                android:clickable="true"
                android:onClick="input"
                android:tag="1"
                android:layout_row="0"
                android:layout_column="0" />
            <Button android:text="@string/tasto2"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto2"
                android:clickable="true"
                android:onClick="input"
                android:tag="2"
                android:layout_row="0"
                android:layout_column="2" />
            <Button android:text="@string/tasto3"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto3"
                android:clickable="true"
                android:onClick="input"
                android:tag="3"
                android:layout_row="0"
                android:layout_column="3" />
            <Button android:text="@string/tasto0"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto0"
                android:clickable="true"
                android:onClick="input"
                android:tag="0"
                android:layout_row="0"
                android:layout_column="4" />
            <Button android:text="@string/tasto4"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto4"
                android:clickable="true"
                android:onClick="input"
                android:tag="5"
                android:layout_row="1"
                android:layout_column="0" />

            <Button android:text="@string/tasto5"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto5"
                android:clickable="true"
                android:onClick="input"
                android:tag="5"
                android:layout_row="1"
                android:layout_column="2" />
            <Button android:text="@string/tasto6"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto6"
                android:clickable="true"
                android:onClick="input"
                android:tag="6"
                android:layout_row="1"
                android:layout_column="3" />
            <Button android:text="@string/tasto00"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto00"
                android:clickable="true"
                android:onClick="input"
                android:tag="00"
                android:layout_row="1"
                android:layout_column="4" />
            <Button android:text="@string/tasto7"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto7"
                android:clickable="true"
                android:onClick="input"
                android:tag="7"
                android:layout_row="3"
                android:layout_column="0" />
            <Button android:text="@string/tasto8"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto8"
                android:clickable="true"
                android:onClick="input"
                android:tag="8"
                android:layout_row="3"
                android:layout_column="2" />
            <Button android:text="@string/tasto9"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:id="@+id/tasto9"
                android:clickable="true"
                android:onClick="input"
                android:tag="9"
                android:layout_row="3"
                android:layout_column="3" />
            <Button android:text="@string/tastoC"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_gravity="fill_horizontal|bottom|left"
                style="@style/TextAppearance.AppCompat.Base.CompactMenu.Dialog"
                android:textColor="#ffffffff"
                android:id="@+id/tastoC"
                android:clickable="true"
                android:onClick="input"
                android:layout_row="3"
                android:layout_column="4" />
        </GridLayout>


    </RelativeLayout>

    <Button
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:id="@+id/tastpowerbutton"
        android:layout_gravity="center_horizontal"
        android:onClick="tastiera_powerup"
        android:background="@drawable/power2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Indietro"
        android:id="@+id/indietro"
        android:onClick="Indietro" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:id="@+id/pergamena"
        android:background="@drawable/pergamenasi"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginLeft="55dp"
        android:onClick="PowerUp"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:id="@+id/manididio"
        android:background="@drawable/manisi"
        android:layout_gravity="bottom"
        android:onClick="PowerUp"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        android:clickable="true"
        android:adjustViewBounds="false" />

    <ImageView
        android:layout_width="63dp"
        android:layout_height="105dp"
        android:id="@+id/terzoocchio"
        android:background="@drawable/occhiosi"
        android:layout_gravity="center_horizontal|bottom|right"
        android:onClick="PowerUp"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:id="@+id/lanterna"
        android:background="@drawable/lanternasi"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="PowerUp"
        android:focusableInTouchMode="false"
        android:visibility="invisible"
        android:clickable="true"
        android:layout_marginLeft="-50dp"
        android:contentDescription="" />

</FrameLayout>