<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.franz.indovinailnumero.app.MainActivity"
    android:background="#3baaff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#fbfbff"
        android:text="@string/info"
        android:id="@string/info"
        android:clickable="false"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="133dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/from"
        android:layout_below="@string/info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textSize="30dp"
        android:visibility="visible"
        android:singleLine="false"
        android:editable="false"
        android:clickable="false"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/totext"
        android:id="@+id/textView"
        android:textStyle="bold|italic"
        android:textColor="#ffffff"
        android:textSize="28dp"
        android:editable="false"
        android:layout_alignBottom="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:text="@string/to"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"/>

    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/start_game"
        android:onClick="StartGame"
        android:layout_below="@+id/editText"
        android:clickable="true" />
</RelativeLayout>
